--- a/src/package.json
+++ b/src/package.json
@@ -17,6 +17,7 @@
     "firebase": "^4.6.0",
     "react": "16.0.0-beta.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.1.tar.gz",
+    "react-native-calendar-strip": "^1.2.4",
     "react-native-elements": "^0.17.0",
     "react-navigation": "^1.0.0-beta.15"
   },
