--- a/src/package.json
+++ b/src/package.json
@@ -15,17 +15,21 @@
     "@expo/samples": "2.1.1",
     "expo": "^22.0.0",
     "firebase": "^4.6.0",
+    "immutable": "^3.8.2",
     "react": "16.0.0-beta.5",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.1.tar.gz",
     "react-native-calendar-strip": "^1.2.4",
     "react-native-elements": "^0.17.0",
-    "react-navigation": "^1.0.0-beta.15"
+    "react-navigation": "^1.0.0-beta.15",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
     "eslint-config-universe": "^1.0.6",
-    "jest-expo": "^22.0.0",
-    "prettier": "^1.7.4"
+    "jest-expo": "^22.0.0"
   },
   "eslintConfig": {
     "extends": "universe/native"
