--- a/src/package.json
+++ b/src/package.json
@@ -29,7 +29,8 @@
   "devDependencies": {
     "eslint": "^4.9.0",
     "eslint-config-universe": "^1.0.6",
-    "jest-expo": "^22.0.0"
+    "jest-expo": "^22.0.0",
+    "prettier": "^1.8.2"
   },
   "eslintConfig": {
     "extends": "universe/native"
